--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@
               </span>
             </div>
           </a>
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link navbar__item--active">Home</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Services</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Doctor</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="action">
+            <a href="#!" class="action__login">Login</a>
+            <a href="#!" class="btn action__signup">Sign up</a>
+          </div>
         </div>
       </div>
     </header>
