--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@
             <a href="#!" class="btn action__signup">Sign up</a>
           </div>
         </div>
+        <section class="hero">
+          <section class="hero__content">
+            <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+            <p class="hero__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="hero__row">
+                <a href="#!" class="btn btn-book">Book Online</a>
+                <p class="hero__phone">or call (123) 456-7890</p>
+            </div>
+          </section>
+          <section class="hero__media">
+            <figure class="hero__images">
+              <img src="assets/img/hero-01.jpg" alt="Dentist" class="hero__img" />
+              <img src="assets/img/hero-02.jpg" alt="Dentist" class="hero__img" />
+            </figure>
+          </section>
+        </section>
       </div>
     </header>
   </body>
