--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       </div>
     </header>
     <main>
+      <!-- Service -->
       <section class="service">
         <div class="container">
           <h2 class="service-heading">Our services</h2>
@@ -249,6 +250,57 @@
           </div>
         </div>
       </section>
+      <!-- Work -->
+      <section class="work">
+        <div class="container">
+          <h2 class="work-heading">How it works</h2>
+          <p class="work-desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+          <section class="work__list">
+            <section class="work-item">
+              <img src="assets/img/search.svg" alt="" class="work-item__icon" />
+              <h3 class="work-item__heading">Search doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="cta">Learn More</a>
+            </section>
+            <section class="work-item">
+              <img
+                src="assets/img/Orion_find-user.svg"
+                alt=""
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Find best doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="cta">Learn More</a>
+            </section>
+            <section class="work-item">
+              <img
+                src="assets/img/Orion_first-aid-kit.svg"
+                alt=""
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Search doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="cta">Learn More</a>
+            </section>
+          </section>
+        </div>
+      </section>
+      <!-- About -->
+       <section class="about">
+        
+       </section>
     </main>
   </body>
 </html>
