--- a/index.html
+++ b/index.html
@@ -298,7 +298,26 @@
         </div>
       </section>
       <!-- About -->
-       <section class="about">
+      <section class="about">
+        <div class="container">
+          <figure class="about__images">
+            <img src="assets/img/about-01.jpg" alt="About us" />
+            <img src="assets/img/about-02.jpg" alt="About us" />
+          </figure>
+          <div class="about__content">
+            <h2 class="about__content--heading">
+              Take back your smile with shine.
+            </h2>
+            <p class="about__content--desc">
+              If you’re missing multiple teeth due to decay, injury, or the
+              natural aging process, dentures might be the perfect solution.
+            </p>
+            <a href="#!" class="btn btn-more">Learn more</a>
+          </div>
+        </div>
+      </section>
+      <!-- Member -->
+       <section class="member">
         
        </section>
     </main>
