--- a/index.html
+++ b/index.html
@@ -317,9 +317,72 @@
         </div>
       </section>
       <!-- Member -->
-       <section class="member">
-        
-       </section>
+      <section class="member">
+        <div class="container">
+          <div class="member-header">
+            <h2 class="member__heading">Our virtual dentist</h2>
+            <a href="#!" class="btn btn-more">Meet our dentist</a>
+          </div>
+          <div class="member-list">
+            <section class="member-item">
+              <img
+                src="assets/img/mem-01.png"
+                alt="avatar"
+                class="member-item__avatar"
+              />
+              <h4 class="member-item__name">Dr. Essence Page</h4>
+              <p class="member-item__department">
+                DDS, California - Linda University
+              </p>
+            </section>
+            <section class="member-item">
+              <img
+                src="assets/img/mem-02.png"
+                alt="avatar"
+                class="member-item__avatar"
+              />
+              <h4 class="member-item__name">Dr. Essence Page</h4>
+              <p class="member-item__department">
+                DDS, California - Linda University
+              </p>
+            </section>
+            <section class="member-item">
+              <img
+                src="assets/img/mem-03.png"
+                alt="avatar"
+                class="member-item__avatar"
+              />
+              <h4 class="member-item__name">Dr. Essence Page</h4>
+              <p class="member-item__department">
+                DDS, California - Linda University
+              </p>
+            </section>
+            <section class="member-item">
+              <img
+                src="assets/img/mem-04.png"
+                alt="avatar"
+                class="member-item__avatar"
+              />
+              <h4 class="member-item__name">Dr. Essence Page</h4>
+              <p class="member-item__department">
+                DDS, California - Linda University
+              </p>
+            </section>
+          </div>
+          <div class="member-pagination">
+            <button class="pagination-left">
+              <img src="assets/img/pagination-left.svg" alt="pagination-left" />
+            </button>
+            <button class="pagination-right">
+              <img
+                src="assets/img/pagination-right.svg"
+                alt="pagination-right"
+              />
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- Install -->
     </main>
   </body>
 </html>
