--- a/index.html
+++ b/index.html
@@ -370,19 +370,76 @@
             </section>
           </div>
           <div class="member-pagination">
-            <button class="pagination-left">
-              <img src="assets/img/pagination-left.svg" alt="pagination-left" />
+            <button class="pagination">
+              <svg
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </button>
-            <button class="pagination-right">
-              <img
-                src="assets/img/pagination-right.svg"
-                alt="pagination-right"
-              />
+            <button class="pagination">
+              <svg
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M0.5 1L5.5 6L0.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </button>
           </div>
         </div>
       </section>
       <!-- Install -->
+      <section class="install">
+        <div class="container">
+          <img
+            src="assets/img/Rectangle.png"
+            alt="install-app"
+            class="install-app"
+          />
+          <section class="install__content">
+            <h2 class="install__content--heading">
+              Take back your smile with dentures
+            </h2>
+            <p class="install__content--desc">
+              If you’re missing multiple teeth due to decay, injury, or the
+              natural aging process, dentures might be the perfect solution.
+            </p>
+            <div class="install__row">
+              <a href="#!" class="install__btn">
+                <img
+                  src="assets/img/Google Play outline badge.png"
+                  alt="Google Play"
+                  class="install__btn-img"
+                />
+              </a>
+              <a href="#!" class="install__btn">
+                <img
+                  src="assets/img/App Store outline badge.png"
+                  alt="App Store"
+                  class="install__btn-img"
+                />
+              </a>
+            </div>
+          </section>
+        </div>
+      </section>
     </main>
   </body>
 </html>
