--- a/index.html
+++ b/index.html
@@ -440,6 +440,85 @@
           </section>
         </div>
       </section>
+      <!-- News -->
+      <section class="news">
+        <div class="container">
+          <div class="news__content">
+            <h2 class="news__content--heading">Read Latest News & Events.</h2>
+            <a href="#!" class="news__content--cta">Read All Blog</a>
+            <div class="news-pagination">
+              <button class="pagination">
+                <svg
+                  width="6"
+                  height="12"
+                  viewBox="0 0 6 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M5.5 1L0.5 6L5.5 11"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <button class="pagination">
+                <svg
+                  width="6"
+                  height="12"
+                  viewBox="0 0 6 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0.5 1L5.5 6L0.5 11"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="news__lists">
+            <div class="news__item">
+              <img
+                src="assets/img/news-01.jpg"
+                alt="Blogs"
+                class="news__item--thumbnail"
+              />
+              <section class="news__item--body">
+                <h4 class="news__item--title">
+                  Key Considerations for Regulatory Compliant.
+                </h4>
+                <p class="news__item--desc">
+                  It’s easy to think about medical care from a narrow
+                  perspective. You go to the hospital.
+                </p>
+                <a href="#!" class="news__item--cta">Learn more</a>
+              </section>
+            </div>
+            <div class="news__item">
+              <img
+                src="assets/img/news-02.jpg"
+                alt="Blogs"
+                class="news__item--thumbnail"
+              />
+              <section class="news__item--body">
+                <h4 class="news__item--title">
+                  What Is Population Health Management?
+                </h4>
+                <p class="news__item--desc">
+                  It’s easy to think about medical care from a narrow
+                  perspective. You go to the hospital.
+                </p>
+                <a href="#!" class="news__item--cta">Learn more</a>
+              </section>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
